# trolley

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  flake.nix  justfile
.github/workflows/: release.yml
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: common.rs  ghostty_defaults.conf  init.rs  mod.rs  package.rs  run.rs  windows_exe_icon.rs
cli/src/commands/formats/: mod.rs  packager_common.rs  rpm.rs
config/: Cargo.toml
config/src/: lib.rs
examples/bubbletea/: .gitignore  go.mod  go.sum  main.go  trolley.toml
examples/hello/: trolley.toml
examples/hello/src/: main.zig
examples/opentui/: .gitignore  package.json  trolley.toml
examples/opentui/src/: index.ts
nix/: extra-zig-deps.nix
patches/ghostty/: windows-render.patch
runtime/: build.zig  build.zig.zon
runtime/macos/: Package.swift
runtime/macos/Sources/: main.swift
runtime/macos/Sources/CTrolley/: trolley.h
runtime/src/: command.zig  common.zig
runtime/src/platform/: linux.zig  windows.zig
