[package]
name = "trolley-config"
version = "0.6.0"
edition = "2024"

[lib]
crate-type = ["lib", "staticlib"]

[features]
cli = ["clap"]

[build-dependencies]
cbindgen = "0.28"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
clap = { version = "4", features = ["derive"], optional = true }
